[package]
name = "linkd-api"
version = "0.1.0"
authors = ["jwhit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
hyper = "0.13.4"
hyper-tls = "0.4.1"
warp = "0.2"
serde = "1.0.106"
serde_derive = "1.0.106"